# RemEngine

./: CMakeLists.txt  README.md  RemEngine.sln
Assets/: coloured.frag  coloured.vert
RemEngine/: Chunk.cpp  Chunk.h  RemEngine.vcxproj  RemEngine.vcxproj.filters  block.cpp  block.h  gameInstance.cpp  gameInstance.h  gameObject.cpp  gameObject.h  main.cpp  mesh.cpp  mesh.h  renderer.cpp  renderer.h  resource.h  shader.h  spectator.cpp  textureAtlas.cpp  textureAtlas.h  transform.cpp  transform.h  world.cpp  world.h  world_matrices.h
RemEngine/Assets/: block.frag  block.vert
src/: Chunk.cpp  Chunk.h  block.cpp  block.h  gameInstance.cpp  gameInstance.h  gameObject.cpp  gameObject.h  main.cpp  mesh.h  shader.cpp  shader.h  spectator.h  textureAtlas.cpp  textureAtlas.h  transform.h  world.cpp  world.h  world_matrices.h
